feat: add scalable Jetstream telemetry
